kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-wserver
  namespace: homework
  labels:
    app: hmwork-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hmwork-nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: hmwork-nginx
    spec:
#      nodeSelector:
#        homework: 'true'
      containers:
      - name: nginx-hm-container
        image: nginx:1.14.2
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
            httpHeaders:
            - name: Custom-Header
              value: Awesome
          initialDelaySeconds: 5
          periodSeconds: 15
          successThreshold: 3
        volumeMounts:
        - mountPath: /homework
          name: common-volume
        - mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
          name: nginx-conf
        lifecycle:
          preStop:
            exec:
              command: ['/bin/sh', '-c', "rm -rf /homework/index.html; echo 'index.html has been deleted' > /proc/1/fd/1; sleep 120"]
     
      volumes:
      - name: common-volume
        emptyDir:
          sizeLimit: 1Mi
     
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
