kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: hmwork-nginx
  ports:
    - name: nginx-svc-port
      protocol: TCP
      port: 8000
      targetPort: 8000
